--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
 
     <div class="hero__section_container">
-      <img class="hero__section_logo" src="/images/heroSectionLogo.png" alt="Zomato logo" />
+      <img class="hero__section_logo" src="images/heroSectionLogo.png" alt="Zomato logo" />
       <h1 class="hero__section_title">Discover the best food & drinks in Mumbai</h1>
       <div class="hero__section_input_container">
         <input class="input_container_location" type="text" placeholder="TWCA, 1, Ashok Rd, Hanu">
