--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 </head>
 
 <body>
+
+  <!-- ==============================HERO SECTION======================================================= -->
+
   <section class="hero__section">
     <header>
       <nav class="navbar">
@@ -54,7 +57,7 @@
       </div>
     </div>
   </section>
-
+  <!-- ==============================WE OFFER SECTION======================================================= -->
 
   <section class="container we_offer">
 
@@ -83,6 +86,7 @@
     </div>
   </section>
 
+  <!-- ==============================COLLECTION SECTION======================================================= -->
 
   <section class="container collections">
     <h1>Collections</h1>
@@ -126,6 +130,104 @@
     </div>
   </section>
 
+  <!-- ==============================POPULAR LOCATION SECTION======================================================= -->
+
+  <section class="container__popularloc">
+
+    <h1>Popular localities in and around Mumbai</h1>
+    <div class="container__popularloc_contains">
+
+      <div class="popularloc L1">
+        <div class="L1 Lp11">
+          <h3>Lower Parel</h3>
+          <p>775 places</p>
+        </div>
+        <div class="popularloc icons">
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+      </div>
+
+      <div class="popularloc L2">
+        <div class="L2 Lp22">
+          <h3>Borivali West</h3>
+          <p>1137 places</p>
+        </div>
+        <div class="popularloc icons">
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+      </div>
+
+      <div class="popularloc L3">
+        <div class="L3 Lp33">
+          <h3>Fort</h3>
+          <p>361 places</p>
+        </div>
+        <div class="popularloc icons">
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+      </div>
+
+      <div class="popularloc L4">
+        <div class="L4 Lp44">
+          <h3>Powai</h3>
+          <p>930 places</p>
+        </div>
+        <div class="popularloc icons">
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+      </div>
+
+      <div class="popularloc L5">
+        <div class="L5 Lp55">
+          <h3>Bandra Kurla Complex</h3>
+          <p>202 places</p>
+        </div>
+        <div class="popularloc icons">
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+      </div>
+
+      <div class="popularloc L6">
+        <div class="L6 Lp66">
+          <h3>Juhu</h3>
+          <p>425 places</p>
+        </div>
+        <div class="popularloc icons">
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+      </div>
+
+      <div class="popularloc L7">
+        <div class="L7 Lp77">
+          <h3>Malad West</h3>
+          <p>1800 places</p>
+        </div>
+        <div class="popularloc icons">
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+      </div>
+
+      <div class="popularloc L8">
+        <div class="L8 Lp88">
+          <h3>Vashi</h3>
+          <p>969 places</p>
+        </div>
+        <div class="popularloc icons">
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+      </div>
+
+      <div class="popularloc L9">
+        <div class="L9 Lp99">
+          <h3>see more</h3>
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- ==============================GET_THE_APP SECTION======================================================= -->
 
   <section class="container get__the_app">
 
@@ -172,9 +274,117 @@
   </section>
 
 
+  <!-- ==============================  EXPLORE SECTION======================================================= -->
+
+  <section class="container__explore_main">
+
+    <h1>Explore options near me</h1>
+    <div class="container__explore_contains">
+      <div class="container__explore e1">
+        <div class="eeblocks e11">
+          <h3>Popular cuisines near me</h3>
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+
+        <p class="explore_desc ed1">
+          Bakery food near me - Beverages food near me - Biryani food near me - Burger food near me - Chinese food near
+          me - Desserts food near me - Ice Cream food near me - Kebab food near me - Maharashtrian food near me - Momos
+          food near me - Mughlai food near me - North Indian food near me - Pizza food near me - Rolls food near me -
+          Sandwich food near me - Seafood food near me - Shake food near me - Sichuan food near me - South Indian food
+          near me - Street food near me
+        </p>
+      </div>
+
+      <div class="container__explore e2">
+        <div class="eeblocks e22">
+          <h3>Popular restaurant types near me</h3>
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+        <p class="explore_desc ed2">
+          Cafés near me - Casual Dining near me - Quick Bites near me</p>
+      </div>
+
+      <div class="container__explore e3">
+        <div class="eeblocks e33">
+          <h3>Cities We Deliver To</h3>
+          <i class="fa-solid fa-circle-chevron-down"></i>
+        </div>
+        <div class="explore_desc ed3">
+          <a href="#">Hyderabad</a>
+          <a href="#">Mumbai</a>
+          <a href="#">DelhiNCR</a>
+          <a href="#">Kolkata</a>
+          <a href="#">Bengaluru</a>
+          <a href="#">Pune</a>
+          <a href="#">Gangtok</a>
+          <a href="#">Kochi</a>
+          <a href="#">Jaipur</a>
+          <a href="#">Ahmedabad</a>
+          <a href="#">Chandigarh</a>
+          <a href="#">Goa</a>
+          <a href="#">Indore</a>
+          <a href="#">Lucknow</a>
+          <a href="#">Chennai</a>
+          <a href="#">Nashik</a>
+          <a href="#">Ooty</a>
+          <a href="#">Shimla</a>
+          <a href="#">Ludhiana</a>
+          <a href="#">Guwahati</a>
+          <a href="#">Amritsar</a>
+          <a href="#">Kanpur</a>
+          <a href="#">Allahabad</a>
+          <a href="#">Aurangabad</a>
+          <a href="#">Bhopal</a>
+          <a href="#">Ranchi</a>
+          <a href="#">Visakhapatnam</a>
+          <a href="#">Bhubaneswar</a>
+          <a href="#">Coimbatore</a>
+          <a href="#">Mangalore</a>
+          <a href="#">Vadodara</a>
+          <a href="#">Nagpur</a>
+          <a href="#">Agra</a>
+          <a href="#">Dehradun</a>
+          <a href="#">Mysore</a>
+          <a href="#">Puducherry</a>
+          <a href="#">Surat</a>
+          <a href="#">Varanasi</a>
+          <a href="#">Patna</a>
+          <a href="#">Udaipur</a>
+          <a href="#">Khajuraho</a>
+          <a href="#">Neemrana</a>
+          <a href="#">Cuttack</a>
+          <a href="#">Trivandrum</a>
+          <a href="#">Haridwar</a>
+          <a href="#">Leh</a>
+          <a href="#">Pushkar</a>
+          <a href="#">Rajkot</a>
+          <a href="#">Kozhikode</a>
+          <a href="#">Alappuzha</a>
+          <a href="#">Thrissur</a>
+          <a href="#">Manipal</a>
+          <a href="#">Vijayawada</a>
+          <a href="#">Jodhpur</a>
+          <a href="#">Kota</a>
+          <a href="#">Ajmer</a>
+          <a href="#">Mussoorie</a>
+          <a href="#">Rishikesh</a>
+          <a href="#">Jalandhar</a>
+          <a href="#">Jammu</a>
+          <a href="#">Manali</a>
+          <a href="#">Dharamshala</a>
+          <a href="#">Madurai</a>
+          <a href="#">Raipur</a>
+          <a href="#">See more</a>
+        </div>
+      </div>
+
+    </div>
+    </div>
+  </section>
+
+  <!-- ==============================FOOTER SECTION======================================================= -->
 
   <footer class="container footer">
-
 
     <div class="footer_section1">
       <img src="images/logo.png" alt="" />
@@ -235,7 +445,9 @@
         <img src="images/appleStore.png" alt="" class="footer__section_logos" />
         <img src="images/playStore.png" alt="" class="footer__section_logos" />
       </div>
+
     </div>
+
 
     <div class="disclamer">
       By continuing past this page, you agree to our Terms of Service, Cookie
@@ -243,8 +455,9 @@
       properties of their respective owners. 2008-2022 © Zomato™ Ltd. All
       rights reserved.
     </div>
-
   </footer>
+
+  <!-- ========================================================================================================= -->
 </body>
 
 </html>
